feat: add DDD projects and weather contracts (Application), infra project scaffold

--- a/src/Presentation/OpenTelemetryDemo.WebApi/OpenTelemetryDemo.csproj
+++ b/src/Presentation/OpenTelemetryDemo.WebApi/OpenTelemetryDemo.csproj
@@ -17,4 +17,9 @@
     <PackageReference Include="OpenTelemetry.Instrumentation.Runtime" Version="1.7.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Application\OpenTelemetryDemo.Application\OpenTelemetryDemo.Application.csproj" />
+    <ProjectReference Include="..\..\Infrastructure\OpenTelemetryDemo.Infrastructure\OpenTelemetryDemo.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
