--- a/src/Infrastructure/OpenTelemetryDemo.Infrastructure/OpenTelemetryDemo.Infrastructure.csproj
+++ b/src/Infrastructure/OpenTelemetryDemo.Infrastructure/OpenTelemetryDemo.Infrastructure.csproj
@@ -10,5 +10,8 @@
     <ProjectReference Include="..\..\Application\OpenTelemetryDemo.Application\OpenTelemetryDemo.Application.csproj" />
   </ItemGroup>
 
-</Project>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.0" />
+  </ItemGroup>
 
+</Project>
